src/test/deca/context/valid/affectation_with_method_call.deca
/*
    Description : Test sur l'affectation avec un appel de méthode

    Résultat : OK
*/
class A{
    int x(){
        return 5;
    }

    int y = x();
}
