src/test/deca/context/invalid/void_method_assign_int.deca
/*
    Description : Test sur l'assignation à partir d'un appel de méthode de type void

    Résultat : Erreur contextuelle
*/
class A{
    int x = y();
    void y(){}
}
